@@ -15,10 +15,12 @@ Wed Mar 16 17:11:37 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)
 
 Wed Mar 16 11:54:12 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)
 
+        * config/tc-hppa.c (pa_equ): Handle both .reg and .equ correctly.
+
 	* config/tc-hppa.c (pa_callinfo): Accept "millicode" as an
 	argument to a .callinfo directive.  Don't loop forever on errors.
 
-        * config/tc-hppa.c (pa_reg): Use pa_parse_number so that we can
+        * config/tc-hppa.c (pa_equ): Use pa_parse_number so that we can
         use pre-defined registers as arguments.
 
 Mon Mar 14 14:29:45 1994  Ken Raeburn  (raeburn@cujo.cygnus.com)
